refactor: 重构项目为现代化 Vue 3 + TypeScript + UnoCSS 技术栈
- 将项目从 Vue 2 + Element Plus + Bootstrap 迁移至 Vue 3 + TypeScript + Naive UI + UnoCSS
- 重构路由系统，添加插件市场、仪表盘等新页面
- 引入国际化支持，添加中英文语言包
- 更新构建配置，使用 Vite 替换原有构建工具
- 清理无用资源文件，优化项目结构
- 添加插件系统架构文档和开发指南

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="zh-CN">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="src/assets/images/up.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/src/assets/logo256.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>GioPic - 下一代浏览器多节点图床上传扩展</title>
+    <meta name="description" content="GioPic 是一款支持多节点并发上传的浏览器扩展，支持自定义插件、Lsky Pro、S3、OSS 等多种存储服务。">
   </head>
   <body>
-    <div id="box" class="container-fluid"></div>
-    <script type="module" src="/src/main.js"></script>
+    <div id="app"></div>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
